--- a/produtos.html
+++ b/produtos.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -75,11 +75,20 @@
         <hr>
         <aside>
             <div id="imagens">
-                <img class="itens" src="imagens/23094400.jpg" alt="">
-                <img class="itens" src="imagens/28225784.jpg" alt="">
-                <img class="itens" src="imagens/37634437.jpg" alt="">
-                <img class="itens" src="imagens/40349104.jpg" alt="">
-                <img class="itens" src="imagens/122445745.jpg" alt="">
+                <div> <img class="itens" src="imagens/23094400.jpg" alt="">
+                    <br> R$00000000000000
+                </div>
+                <div> <img class="itens" src="imagens/28225784.jpg" alt="">
+                    <br> R$00000000000000
+                </div>
+                <div> <img class="itens" src="imagens/37634437.jpg" alt=""><br> R$00000000000000
+                </div>
+                <div> <img class="itens" src="imagens/40349104.jpg" alt="">
+                    <br> R$00000000000000
+                </div>
+                <div> <img class="itens" src="imagens/122445745.jpg" alt="">
+                    <br> R$00000000000000
+                </div>
             </div>
         </aside>
         <footer>
